--- a/index.html
+++ b/index.html
@@ -9,22 +9,7 @@
   <body>
     <div id="root"></div>
 
-    <!-- <script>
-        // insert heading using javascript
-    //    const heading = document.createElement("h1");
-    //    heading.innerHTML = "Hello World from Javascript";
-    //     const root = document.getElementById("root");
-    //     root.appendChild(heading);
-
-// insert heading using reactjs
-
-    
-    </script> -->
-
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-    <script src="./App.js">
+    <script type="module" src="./App.js">
     </script>
 
 
